LogAlyzer/force-app/main/default/objects/Log_Line__c/Log_Line__c.object-meta.xml
<CustomObject>
    <label>Log Line</label>
    <nameField>
        <displayFormat>LL{00000000}</displayFormat>
        <label>LineNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Log Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>