LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/Called_From__c.field-meta.xml
<CustomField>
    <fullName>Called_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Called From</label>
    <referenceTo>Log_Line__c</referenceTo>
    <relationshipLabel>Log Lines (Called From)</relationshipLabel>
    <relationshipName>Child_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>