LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/Called_From_Line__c.field-meta.xml
<CustomField>
    <fullName>Called_From_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Called From Line</label>
    <referenceTo>Log_Line__c</referenceTo>
    <relationshipLabel>Log Lines</relationshipLabel>
    <relationshipName>Log_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>