LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/CodeID__c.field-meta.xml
<CustomField>
    <fullName>CodeID__c</fullName>
    <label>CodeID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>