LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/Log_File__c.field-meta.xml
<CustomField>
    <fullName>Log_File__c</fullName>
    <label>Log File</label>
    <referenceTo>Log_File__c</referenceTo>
    <relationshipLabel>Log Lines</relationshipLabel>
    <relationshipName>Log_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>