LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/LogTime__c.field-meta.xml
<CustomField>
    <fullName>LogTime__c</fullName>
    <label>LogTime</label>
    <length>18</length>
    <type>Text</type>
</CustomField>