LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/Next_Line__c.field-meta.xml
<CustomField>
    <fullName>Next_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Line</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>$Source.Log_File__c</field>
            <operation>equals</operation>
            <valueField>$Source.Log_File__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Log_Line__c</referenceTo>
    <relationshipLabel>Log Lines (Next Line)</relationshipLabel>
    <relationshipName>Previous_Line</relationshipName>
    <type>Lookup</type>
</CustomField>