LogAlyzer/force-app/main/default/objects/Log_Line__c/fields/Offset_Time__c.field-meta.xml
<CustomField>
    <fullName>Offset_Time__c</fullName>
    <label>Offset Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>